redesign, VS'22, C# 6.0 biblio lagt til

--- a/ClassLibrary1/ToolLibrary.csproj
+++ b/ClassLibrary1/ToolLibrary.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="CardGame.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
