Namespace changes Structural changes to where we find helpers Made a functional pinger

--- a/NetworkAnalyser/appsettings.json
+++ b/NetworkAnalyser/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Hosts": [ "8.8.8.8" ],
+  "Timeout": 100,
+  "RunInterval": 5,
   "Version": {
     "Major": 1,
     "Minor": 0
