Added more configuration, added more averages and helper methods

--- a/NetworkAnalyser/appsettings.json
+++ b/NetworkAnalyser/appsettings.json
@@ -5,9 +5,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Hosts": [ "8.8.8.8" ],
+  "Hosts": [ "8.8.8.8", "8.8.4.4", "1.1.1.1" ],
   "Timeout": 100,
-  "RunInterval": 5,
+  "SampleSize": 1000,
+  "RunInterval": 10,
   "Version": {
     "Major": 1,
     "Minor": 0
